Обновлена Swagger документация
